# fuckapikey

./: README.md  pyproject.toml
src/fuckapikey/: main.py
